part1/Exercise_1.08/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserverport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserverport
  template:
    metadata:
      labels:
        app: webserverport
    spec:
      containers:
        - name: webserverport
          image: vilkorppi/webserver:v5
