part1/Exercise_1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserverservice
spec:
  type: ClusterIP
  selector:
    app: webserverport
  ports:
    - port: 456
      protocol: TCP
      targetPort: 3013
